<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RFIDoor</string>
    <string name="scan_tag">Scan a tag</string>
    <string name="connect">Connect…</string>
    <string name="version">version</string>
    <string name="add">Add</string>
    <string name="open">Open</string>
    <string name="delete">Delete</string>
    <string name="door_open_result">Door opened</string>
    
    <string name="group_prompt">Set Current Group</string>

    <string-array name="groups">
        <item >1</item>
        <item >2</item>
        <item >3</item>
        <item >4</item>
        <item >5</item>
        <item >6</item>
        <item >7</item>
    </string-array>
        <string name="associate_contact">Associate Contact</string>
        <string name="open_the_door">Open the door</string>
        <string name="permission_door_open_description">Allows the application to open the door if Bluetooth is enabled and it\'s nearby</string>
</resources>